--- a/index.html
+++ b/index.html
@@ -37,17 +37,26 @@
         .options button {
             padding: 10px 20px;
             margin: 5px;
-            border: 1px solid #ccc; /* Легка рамка */
+            border: 1px solid #ccc;
             border-radius: 5px;
             cursor: pointer;
             font-size: 1em;
             transition: background-color 0.3s;
-            background-color: white; /* Білі кнопки для всіх питань */
+            background-color: white;
             color: black;
         }
 
         .options button:hover {
-            background-color: #f0f0f0; /* Легкий ефект при наведенні */
+            background-color: #f0f0f0;
+        }
+
+        /* Стилі для фінального зображення */
+        #final-image {
+            max-width: 90%;
+            max-height: 80vh;
+            border-radius: 10px;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
     </style>
 </head>
@@ -80,6 +89,7 @@
 
         <div id="result" style="display: none;">
             <p id="final-emoji" style="font-size: 5em; margin: 0;"></p>
+            <img id="final-image" src="" alt="Наше спільне фото" style="display: none;">
         </div>
     </div>
 
