Refine background color comment and fix newline
Updated background color comment for clarity and added newline at end of file.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            background-color: #e0ffc0; /* Світло-зелений фон для першого екрану */
+            background-color: #e0ffc0; /* Світло-зелений фон */
             transition: background-color 0.8s ease;
             text-align: center;
         }
