Add emojis to mood options and second question

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <div id="question1">
             <p class="question">Привіт, сонечко! Як твій настрій сьогодні?) ☀️</p>
             <div id="mood-options" class="options">
-                <button onclick="showQuestion2()">намана</button>
-                <button onclick="showQuestion2()">нинаю</button>
-                <button onclick="showQuestion2()">супер-пупер</button>
+                <button onclick="showQuestion2()">намана🙂‍↕️</button>
+                <button onclick="showQuestion2()">нинаю🥺</button>
+                <button onclick="showQuestion2()">супер-пупер💋</button>
             </div>
         </div>
 
         <div id="question2" style="display: none;">
-            <p class="question">Чи хотіли б ви сьогодні о 13:00 зустрітись за адресою Матроса кішки 40 для перегляду нашого улюбленого серіалу, під стаканчик прохолодної кока-коли та піцулечку пепероні?</p>
+            <p class="question">Чи хотіли б ви сьогодні о 13:00 зустрітись за адресою Матроса кішки 40 для перегляду нашого улюбленого серіалу, під стаканчик прохолодної кока-коли та піцулечку пепероні?🍕</p>
             <div id="date-options" class="options">
                 <button onclick="showQuestion3()">так</button>
                 <button onclick="handleFinalResponse('no')">ні:(</button>
